# melt-transport-data

./: README
1D_upwelling/: 1D_plume_bulk_density.prm  1D_plume_fluid_density.prm  1D_plume_incompressible.prm  1D_plume_solid_density.prm  1D_ridge.prm  1D_ridge_bulk_density.prm  1D_ridge_fluid_density.prm  1D_ridge_incompressible.prm  1D_ridge_solid_density.prm  CMakeLists.txt  density_gradient_approximation.cc  final.txt  plot_melt_volumes.plt  plot_melt_volumes_ridge.plt  plot_pressure_gradients.plt  plume_fluid_density.csv  plume_incompressible.csv  plume_pressure_gradient_bulk_incompressible.csv  plume_pressure_gradient_incompressible.csv  ridge.txt  ridge_bulk_density.csv  ridge_pressure_gradient_bulk_incompressible.csv
1D_upwelling/heating/: 1D_plume_incompressible_heating.prm  1D_plume_incompressible_no_heating.prm  heating  heating_profile.csv  no_heating_profile.csv  plot_heating.plt
1D_upwelling/plots/: plot_melt_volumes_plume.plt  plume_bulk_density.csv  plume_solid_density.csv  ridge_fluid_density.csv  ridge_incompressible.csv  ridge_pressure_gradient_incompressible.csv  ridge_solid_density.csv
adaptive_convergence/: base.prm  melt_transport_incompressible3.mw  paraview.pvsm  plot2.py
compressible_convergence/: CMakeLists.txt  base.prm  cont.prm  loop.prm  loop3.prm  melt_transport_compressible.mw  plot2.py  plot3.py  plugin.cc  run.sh  run_2.prm  run_3.prm  run_4.prm  run_5.prm  run_6.prm  run_7.prm
global/: global_melt.prm  global_no_melt.prm  plot_depth_average.plt  plot_porosity.plt  plot_vrms.plt
plume/: plume_3d.prm  plume_compressible.prm  (+5 more)
(+41 files in other folders)
