CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

FIND_PACKAGE(Aspect REQUIRED HINTS ${Aspect_DIR} ../ ../../ $ENV{ASPECT_DIR})
DEAL_II_INITIALIZE_CACHED_VARIABLES()

SET(TARGET "density_gradient_approximation")
PROJECT(${TARGET})

ADD_LIBRARY(${TARGET} SHARED density_gradient_approximation.cc)
ASPECT_SETUP_PLUGIN(${TARGET})
